--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gsoAn</artifactId>
-      <version>2.2.4</version>
+      <version>2.2.4A</version>
     </dependency>
 </dependencies>
 
